<resources>
    <string name="app_name">PaySure</string>
    <string name="email">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="connexion_button">Connexion</string>
    <string name="connexion_text">Connexion</string>
    <string name="dettes">Dettes</string>
    <string name="accueil">Accueil</string>
    <string name="clients">Clients</string>
    <string name="paiement">Paiements</string>
    <string name="historique">Historique</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="liste_clients">La listes des Clients</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nom">Nom</string>
    <string name="telephone">Téléphone</string>
    <string name="adresse">Adresse</string>
    <string name="ajouter_un_client">Ajouter un client</string>
    <string name="annuler">Annuler</string>
    <string name="ajouter">Enregistrer</string>
</resources>