<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/accuiel"
        android:title="@string/accueil"
        android:icon="@drawable/baseline_add_home_24"/>


    <item android:id="@+id/client"
        android:title="@string/clients"
        android:icon="@drawable/baseline_account_circle_24"/>


    <item android:id="@+id/dette"
        android:title="@string/dettes"
        android:icon="@drawable/outline_account_balance_24"/>


    <item android:id="@+id/paiement"
        android:title="@string/paiement"
        android:icon="@drawable/outline_account_balance_wallet_24"/>

    <item android:id="@+id/historique"
        android:title="@string/historique"
        android:icon="@drawable/baseline_admin_panel_settings_24"/>

</menu>